--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+ <header>AluraFlix</header> 
+ <h1>livros que quero ler</h1>
+<p>o lado feio do amor resumo</p>
+  
 </body>
 </html>
