--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
- <header>AluraFlix</header> 
- <h1>livros que quero ler</h1>
-<p>o lado feio do amor resumo</p>
-  
+    <header>AluraFlix</header>
+    <h1>livros que quero ler</h1>
+    <p>o lado feio do amor resumo</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/u0BHN1t3HhU?si=HU-vkOk3yovYINM9"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        raeferrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
+
 </html>
