--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         raeferrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h2>outras séries que eu gosto</h2>
+
+    <div class="categorias-videos">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uz4XoG5S7Uo?si=TpsCjoAfApi_l9BN"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
 </body>
 
 </html>
